--- a/configure.ac
+++ b/configure.ac
@@ -83,6 +83,7 @@ AM_CFLAGS="\
  -Wextra\
  -Wmissing-format-attribute\
  -Wmissing-noreturn\
+ -Wmissing-prototypes\
  -Wno-unused-parameter\
  -Wpointer-arith\
  -Wshadow\
