checkd: make LeaseTime, LeaseRememberFactor and StateSyncInterval configurable

--- a/conf/check.conf
+++ b/conf/check.conf
@@ -1,6 +1,9 @@
 # arpobserver-checkd configuration
 
+#LeaseTime=1d
+#LeaseRememberFactor=5
 #ProtectIP=
 #ProtectMAC=
 #ProtectMACIPPairing=
 #ShmLogName="/arpobserver-shm-log"
+#StateSyncInterval=5m
