--- a/debian/control
+++ b/debian/control
@@ -9,6 +9,7 @@ Build-Depends: asciidoctor,
                libevent-dev,
                libpcap-dev,
                libsqlite3-dev,
+               meson,
                pkg-config
 Standards-Version: 4.5.1
 Rules-Requires-Root: no
