--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -44,7 +44,7 @@ jobs:
           wget -O - https://ftp-master.debian.org/keys/archive-key-10.asc 2>/dev/null | sudo apt-key add -
           sudo add-apt-repository 'deb http://deb.debian.org/debian/ sid main' -y
           sudo apt-get update -q
-          sudo apt-get install -y asciidoctor check
+          sudo apt-get install -y asciidoctor check meson
 
     - name: Setup
       run: meson setup build
