--- a/debian/rules
+++ b/debian/rules
@@ -1,8 +1,6 @@
 #!/usr/bin/make -f
 
-export DEB_BUILD_MAINT_OPTIONS = hardening=+all
-export DEB_CFLAGS_MAINT_APPEND = -flto
-export DEB_LDFLAGS_MAINT_APPEND = -flto
+export DEB_BUILD_MAINT_OPTIONS = hardening=+all optimize=+lto
 
 %:
 	dh $@
