--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -37,7 +37,7 @@ jobs:
         languages: ${{ matrix.language }}
 
     - name: Install Dependencies (standard)
-      run: sudo apt-get install -y libevent-dev libmysqlclient-dev libpcap-dev libsqlite3-dev pkg-config
+      run: sudo apt-get install -y build-essential libevent-dev libmysqlclient-dev libpcap-dev libsqlite3-dev pkg-config
 
     - name: Install dependencies (extra)
       run: |
