meson: enable additional compiler warnings

--- a/meson.build
+++ b/meson.build
@@ -55,13 +55,19 @@ compiler_arguments = [
     '-Wfloat-equal',
     '-Wformat=2',
     '-Winit-self',
+    '-Wlogical-op',
     '-Wmissing-format-attribute',
     '-Wmissing-noreturn',
     '-Wmissing-prototypes',
+    '-Wnested-externs',
     '-Wnull-dereference',
     '-Wpointer-arith',
+    '-Wredundant-decls',
     '-Wshadow',
+    '-Wshift-overflow=2',
+    '-Wstrict-aliasing=2',
     '-Wstrict-prototypes',
+    '-Wsuggest-attribute=noreturn',
     '-Wundef',
     '-Wunused',
     '-Wwrite-strings',
